# dbTransport

./: CSV_Transport.hs  DatabaseTransport.hs  Main.hs  README.md  Tests.hs  Types.hs  dbTransport.cabal  exampleFile.hs
testArchive/105/2065/: 2013-02-28.txt  2013-03-01.txt  2013-03-02.txt  2013-03-03.txt  2013-03-04.txt  2013-03-05.txt  2013-03-06.txt  2013-03-07.txt  2013-03-08.txt  2013-03-09.txt  2013-03-10.txt  2013-03-11.txt  2013-03-12.txt  2013-03-13.txt  2013-03-14.txt  2013-03-15.txt  2013-03-16.txt  2013-03-17.txt  2013-03-18.txt  2013-03-19.txt  2013-03-20.txt  2013-03-21.txt  2013-03-22.txt  2013-03-23.txt  2013-03-24.txt  2013-03-25.txt  2013-03-26.txt  2013-03-27.txt  2013-03-28.txt  2013-03-29.txt  2013-03-30.txt  2013-03-31.txt  2013-04-01.txt  2013-04-02.txt  2013-04-03.txt  2013-04-04.txt  2013-04-05.txt  2013-04-06.txt  2013-04-07.txt  2013-04-08.txt  (+130 more)
testArchive/105/2066/: 2013-02-28.txt  2013-03-01.txt  2013-03-02.txt  2013-03-03.txt  2013-03-04.txt  2013-03-05.txt  2013-03-06.txt  2013-03-07.txt  2013-03-08.txt  2013-03-09.txt  2013-03-10.txt  2013-03-11.txt  2013-03-12.txt  2013-03-13.txt  2013-03-14.txt  2013-03-15.txt  2013-03-16.txt  2013-03-17.txt  2013-03-18.txt  2013-03-19.txt  2013-03-20.txt  2013-03-21.txt  2013-03-22.txt  2013-03-23.txt  2013-03-24.txt  2013-03-25.txt  2013-03-26.txt  2013-03-27.txt  2013-03-28.txt  2013-03-29.txt  2013-03-30.txt  2013-03-31.txt  2013-04-01.txt  2013-04-02.txt  2013-04-03.txt  2013-04-04.txt  2013-04-05.txt  2013-04-06.txt  2013-04-07.txt  2013-04-08.txt  (+60 more)
