Name:                DatabaseTransport
Version:             0.0.1
Description:         transfer files from Slow File System to Database
License:             BSD3
License-file:        LICENSE
Author:              Scott Murphy
Maintainer:          scottmurphy09@gmail.com    
Build-Type:          Simple
Cabal-Version:       >=1.2

library 
    exposed-modules: DatabaseTransport
                     Types
                     Tests



    extensions:         TemplateHaskell
                        QuasiQuotes
                        OverloadedStrings
                        NoImplicitPrelude
                        CPP
                        MultiParamTypeClasses
                        TypeFamilies
                        GADTs
                        GeneralizedNewtypeDeriving
                        FlexibleContexts
                        EmptyDataDecls
                        NoMonomorphismRestriction
                        TypeFamilies
                        Arrows

    Build-Depends:      base                     >= 3         &&   < 5
                       ,persistent-mongoDB       >= 1.2       &&   < 1.3
                       ,mongoDB                  >= 1.3.2     &&   < 1.4.0
                       ,bytestring               >= 0.9       &&   < 1.0
                       ,network                  >= 2.3.1.0   &&   < 2.4
                       ,directory                >= 1.2.0.1   &&   < 1.3.0.0
                       ,system-fileio            >= 0.3.11    &&   < 0.4.0
                       ,system-filepath          >= 0.4.7     &&   < 0.5.0
                       ,transformers             >= 0.3.0.0   &&   < 0.4.0.0
                       ,containers               >= 0.5.0.0   &&   < 0.5.2.2
                       ,time                     >= 1.4       &&   < 1.5
                       ,old-locale               >= 1.0.0.4   &&   < 1.1
                       ,either                   >= 3.4.1     &&   < 3.4.2
                       ,parsec                   >= 3.1.3     &&   < 3.1.4
                       ,process                  >= 1.1.0.1   &&   < 1.2
                       ,mtl                      >= 2.1       &&   < 2.2
                       ,bson                     >= 0.2.1     &&   < 0.2.2
                       ,aeson                    >= 0.6.1.0   &&   < 0.7.1.0
                       ,HTTP                     >= 4000.2.8  &&   < 4000.3.8
                       ,http-conduit             >= 1.9.3     &&   < 2.0
                       ,safe                     >= 0.3.3     &&   < 0.4.3
                       ,text                     >= 0.11.2 
                       

Executable importFolder
    main-is:            Main.hs
    build-depends:      base
                                          
    ghc-options:      -threaded -O2 




